tests/machine/x/c/load_yaml.error
exit status 1
/workspace/mochi/tests/machine/x/c/load_yaml.c:11:15: error: duplicate member ‘name’
   11 |   const char *name;
      |               ^~~~
/workspace/mochi/tests/machine/x/c/load_yaml.c:12:7: error: duplicate member ‘age’
   12 |   int age;
      |       ^~~
/workspace/mochi/tests/machine/x/c/load_yaml.c:13:15: error: duplicate member ‘email’
   13 |   const char *email;
      |               ^~~~~
